@@ -2,7 +2,7 @@
 # FIDO Device Onboard (FDO) Protocol Reference Implementation (PRI) Quick Start
 
 This is a reference implementation of the
-[FDO v1.1 Review Draft](https://fidoalliance.org/specs/FDO/FIDO-Device-Onboard-RD-v1.1-20211214)
+[FDO v1.1 Proposed Standard](https://fidoalliance.org/specs/FDO/FIDO-Device-Onboard-PS-v1.1-20220419)
 published by the FIDO Alliance. It provides production-ready implementation for the protocol defined
 by the specification. It also provides example implementation for different components to
 demonstrate end-to-end execution of the protocol. Appropriate security measures should be taken while
@@ -12,7 +12,7 @@ deploying the example implementation for these components.
 
 * **Ubuntu (20.04, 22.04) / RHEL (8.4, 8.6) / Debian 11.4**. +
 * **Maven 3.6.3**.
-* **Java 11**.
+* **Java 17**.
 * **Haveged**.
 * **Docker engine (minimum 20.10.10, Supported till version 20.10.21) / Podman engine (For RHEL) 3.4.2+**
 * **Docker-compose (minimum version 1.29.2) / Podman-compose 1.0.3(For RHEL)**
@@ -37,7 +37,7 @@ FDO PRI source code is organized into the following sub-folders.
 
 ## Building FDO PRI Source
 
-FDO PRI source is written in [Java 11](https://openjdk.java.net/projects/jdk/11/) and uses the
+FDO PRI source is written in [Java 17](https://openjdk.java.net/projects/jdk/17/) and uses the
 [Apache Maven* software](http://maven.apache.org).
 
 The list of ports that are used for unit tests and sample code:
@@ -74,9 +74,11 @@ The build creates artifacts which will be used in the rest of this guide.
 
 The runnable artifacts can be found in `<fdo-pri-src>/component-samples/demo/`.
 
+***NOTE***: Export the following variable `JDK_JAVA_OPTIONS="--add-opens java.base/java.lang=ALL-UNNAMED"`, if you are facing ClassFormatError exception while building using maven.
+
 ### Credential storage
 
-Credentials are defined in the `<fdo-pri-src>/component-sample/demo/{component}/service.env` for each service and will be made available as environment variables to each docker/podman container.  
+Credentials are defined in the `<fdo-pri-src>/component-sample/demo/{component}/service.env` for each service and will be made available as environment variables to each docker/podman container.
 
 aio/service.env
 manufacturer/service.env
@@ -100,8 +102,8 @@ The following passwords are defined in each service.env:
 | requireSSL           | Boolean value specifying SSL connection with Hibernate ORM |
 
 
-Keystores containing private keys can be stored in the database - `<fdo-pri-src>/component-sample/demo/{component}/app-data/emdb.mv.db` 
-as well as in the mounted file system. During runtime, the deployer can decide the mode of Keystore IO by activating the required worker class. 
+Keystores containing private keys can be stored in the database - `<fdo-pri-src>/component-sample/demo/{component}/app-data/emdb.mv.db`
+as well as in the mounted file system. During runtime, the deployer can decide the mode of Keystore IO by activating the required worker class.
 
 keys_gen.sh can be used to generate random passwords for each service.env.
 
@@ -113,7 +115,7 @@ keys_gen.sh can be used to generate random passwords for each service.env.
 1. Generating demo certificate authority KeyPair and certificate
 
     ```shell
-      bash demo-ca.sh
+      bash demo_ca.sh
     ```
 
     **NOTE**: Configure the properties of `demo-CA` by updating `root-ca.conf`.
@@ -138,6 +140,12 @@ keys_gen.sh can be used to generate random passwords for each service.env.
 
     Credentials will be stored in the `secrets` directory within `<fdo-pri-src>/component-sample/demo/scripts`.
 
+   **NOTE:** Execute the following command to add hosted rendezvous certificates to the java client trust stores.
+
+    ```
+    $ echo | openssl s_client -proxy ${https_proxy_host}:${https_proxy_port} -showcerts -connect fdorv.com:443 2>/dev/null | sed -n '/-----BEGIN CERTIFICATE-----/, /-----END CERTIFICATE-----/p' >> ./secrets/ca-cert.pem
+    ```
+
 4. Copy both `secrets/` and `service.env` file from  `<fdo-pri-src>/component-sample/demo/scripts`  folder to the individual components.
 
     **NOTE:** Don't replace `service.env` present in the database component with generated `service.env` in `scripts` folder.
@@ -151,6 +159,8 @@ keys_gen.sh can be used to generate random passwords for each service.env.
     **NOTE**: Component refers to the individual FDO services like aio, manufacturer, rv , owner and reseller.
 
     **NOTE**: Docker secrets are only available to swarm services, not to standalone containers. To use this feature, consider adapting your container to run as a service. Stateful containers can typically run with a scale of 1 without changing the container code.
+
+    **NOTE**: Make sure to clean `api-user.pem` of the owner component at `<fdo-pri-src>/component-samples/demo/owner/secrets/` and restart owner service, if connections to the external Rendezvous service are failing. With certificates present in `api-user.pem` the owner component tries to perform an mTLS connection with the external Rendezvous component.
 
 ### Specifying Subject alternate names for the Web/HTTPS self-signed certificate.
 
@@ -179,7 +189,7 @@ Uncomment `subjectAltName` and allowed list of IP and DNS in `[alt_names]` secti
 
 ### Starting Standalone Database for PRI servers
 
-1. Copy generated `secrets/` folder to `<fdo-pri-src>/component-sample/demo/db` folder. [Generate secrets](#Generating-random-passwords-using-keys_gen.sh)
+1. Copy generated `secrets/` folder to `<fdo-pri-src>/component-sample/demo/db` folder. [Generate secrets](https://github.com/fido-device-onboard/pri-fidoiot#generating-random-passwords-using-keys_gensh)
 
 2. Start the Database service
 ```shell
@@ -380,7 +390,7 @@ For authorization, users can use DIGEST AUTH with "apiUser" and api_password as 
 
 Result body will be the owners certificate in PEM format
 
-[REFER](https://github.com/secure-device-onboard/pri-fidoiot/tree/master/component-samples/demo/aio#list-of-key-store-alias-values) for the other supported attestation type.
+[REFER](https://github.com/fido-device-onboard/pri-fidoiot/tree/master/component-samples/demo/aio#list-of-key-store-alias-values) for the other supported attestation type.
 
 Next, collect the serial number of the last manufactured voucher
 
@@ -398,7 +408,7 @@ POST https://host.docker.internal:8038/api/v1/mfg/vouchers/43FF320A(or http://ho
 
 For authorization, users can use DIGEST AUTH with "apiUser" and api_password as defined in the manufacturer's service.env or can use CLIENT-CERT AUTH (mTLS).
 
-POST content-type `text\plain` 
+POST content-type `text\plain`
 
 In the request body add owner's certificate.
 
@@ -461,8 +471,8 @@ For authorization, users can use DIGEST AUTH with "apiUser" and api_password as 
 
 POST content
 ```
-[ 
-  {"filedesc" : "setup.sh", "resource" : "https://google.com"}, 
+[
+  {"filedesc" : "setup.sh", "resource" : "https://google.com"},
   {"exec" : ["sh","setup.sh"] }
 ]
 ```
